--- a/style.css
+++ b/style.css
@@ -134,13 +134,13 @@
 }
 
 
-.main_fifth h2{
+#About_Me h2{
     font-family: cursive;
     color: grey;
     text-align: center;
     margin-top: 60px;
 }
-.main_fifth p{
+#About_Me p{
     padding: 100px;
     padding-top: 0px;
     font-family: sans-serif;
