--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
     height: 70px;
     background-color: white;
     margin: 0 auto;
-  
+ 
+
 }
 .second_left{
     width: 280px;
@@ -144,8 +145,8 @@
 }
 .main_main_third{
     width: 800px;
-        height: 300px;
-        top: 100px;
+        height: 320px;
+        top: 80px;
         position: absolute;
         
         left: 200px;
@@ -153,7 +154,7 @@
 }
 .third_left{
     width: 400px;
-    height: 300px;
+    height: 320px;
     position: absolute;
     
     background-image: url("././images/Babu\ Mama1.png");
@@ -169,7 +170,7 @@
   
 .third_right{
     width: 400px;
-    height: 300px;
+    height: 320px;
     background-color: rgb(252, 248, 248);
   position: absolute;
   color: rgb(64, 96, 102);
@@ -184,7 +185,7 @@
 }
 .third_right p{
     margin-top: 0px;
-    font-size: 10px;
+    font-size: 12px;
 }
 .third_p{
     margin: 0px;
@@ -194,18 +195,38 @@
    height: 60px;
     background-color:rgb(152, 198, 212) ;
     margin: 0 auto;
+
 }
 .main_fourth ul{
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    text-align: center;
+    margin-left: 330px;
+   
 }
-.main_fourth ul li{}
+.main_fourth ul li{
+    width: 40px;
+    height: 40px;
+    border: 1px solid white;
+    display: inline-block;
+    margin: 10px;
+    border-radius: 50%;
+   
+}
 .main_fourth ul li a{}
-.main_fourth ul li a i{}
+.main_fourth ul li a i{
+    color: white;
+    font-size: 20px;
+    line-height: 40px;
+}
 #About_Me{
     width: 1200px;
-    height: 200px;
+    height: 180px;
     margin: 0 auto;
+    margin-bottom: 20px;
  
 }
 
@@ -228,7 +249,7 @@
     width: 1200px;
     height: 60px;
     margin: 0 auto;
-    background-color:rgb(216, 233, 238) ;
+    background-color:rgb(152, 198, 212) ;
    
 }
 .footerleft{
@@ -236,15 +257,15 @@
     height: 60px;
     box-sizing: border-box;
    
-    vertical-align: top;
+     vertical-align: top;
     display: inline-block;
     padding-left: 20px;
 }
 .footerleft p{
     font-family: sans-serif;
     font-size: 15px;
-
-    color:grey;
+margin-top: 25px;
+    color:rgb(255, 253, 253);
 }
 
 .footerright{
@@ -257,26 +278,188 @@
     
     text-align: right;
 }
-#Interest{
+.all_experience{
     width: 1200px;
-    height: 200px;
+    height: 1700px;
     margin: 0 auto;
-    border: 1px solid;
-    box-sizing: border-box;
+    background-color: rgb(253, 250, 250);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    
 }
-#Interest h2{
-    font-family: 'Times New Roman', Times, serif;
+#job_experience{
+    width: 790px;
+    height: 365px;
+    border: 1px solid;
+    padding-left: 20px;
+    margin-bottom: 40px;
+    border: 1px solid rgb(243, 237, 237);
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgb(209, 206, 206);
+    margin-left: 10px;
+}
+#job_experience i{
+    font-size: 30px;
+    border: 1px solid rgb(55, 77, 83);
+    padding: 10px;
+    border-radius: 50%;
+    margin-right: 15px;
+    color: rgb(55, 77, 83);
+}
+#job_experience h3{
+    font-family: cursive;
     font-size: 30px;
     color:rgb(152, 198, 212);
     text-align: left;
-    margin-top: 20px;
-    padding-left: 10px;
+    margin-top: 30px;
+    display: inline-block;
 }
-#Interest p{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+#job_experience p{
+    font-family: sans-serif;
+    font-size: 18px;
+    color: rgb(55, 77, 83);
+    text-align: left;
+    padding-right: 20px;
+    
+}
+#research_interest{
+    width: 790px;
+    height: 250px;
+    border: 1px solid;
+    padding-left: 20px;
+    margin-bottom: 40px;
+    border: 1px solid rgb(243, 237, 237);
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgb(209, 206, 206);
+    margin-left: 390px;
+    margin-right: 10px;
+}
+
+
+#research_interest h3{
+    font-family: cursive;
+    font-size: 30px;
     color:rgb(152, 198, 212);
     text-align: left;
-    margin-top: 0px;
+    margin-top: 30px;
+    display: inline-block;
+}
+#research_interest p{
+    font-family: sans-serif;
+    font-size: 16px;
+    color: rgb(55, 77, 83);
+    text-align: left;
+    padding-right: 20px;
+}
+#research_interest i{
+    font-size: 30px;
+    border: 1px solid rgb(55, 77, 83);
+    padding: 10px;
+    border-radius: 50%;
+    margin-right: 15px;
+    color: rgb(55, 77, 83);
+}
+#ongoing_research{
+    width: 790px;
+    height: 250px;
+    border: 1px solid;
+    padding-left: 20px;
+    margin-bottom: 40px;
+    border: 1px solid rgb(243, 237, 237);
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgb(209, 206, 206);
+
+    margin-left: 10px;
+}
+#ongoing_research i{
+    font-size: 30px;
+    border: 1px solid rgb(55, 77, 83);
+    padding: 10px;
+    border-radius: 50%;
+    margin-right: 15px;
+    color: rgb(55, 77, 83);
+}
+#ongoing_research  h3{
+    font-family: cursive;
+    font-size: 30px;
+    color:rgb(152, 198, 212);
+    text-align: left;
+    margin-top: 30px;
+    display: inline-block;
+}
+#ongoing_research p{
+    font-family: sans-serif;
+    font-size: 16px;
+    color: rgb(55, 77, 83);
+    text-align: left;
+    padding-right: 20px;
+}
+#certificates{
+    width: 1170px;
+    height: 700px;
+    border: 1px solid;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    border: 1px solid rgb(243, 237, 237);
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgb(209, 206, 206);
+padding-left: 20px;
+    margin: 0 auto;
+}
+#certificates h3{
+    font-family: cursive;
+    font-size: 30px;
+    color:rgb(152, 198, 212);
+    text-align: left;
+    margin-top: 30px;
+    display: inline-block;
+}
+#certificates i{
+    font-size: 30px;
+    border: 1px solid rgb(55, 77, 83);
+    padding: 10px;
+    border-radius: 50%;
+    margin-right: 15px;
+    color: rgb(55, 77, 83);
+}
+#certificates table{
+    width: 1105px;
+    height: 580px;
+    margin: 0 auto;
+   
+    border-collapse: collapse;
+}
+#certificates table td,th{
+    border: 1px solid rgb(207, 205, 205);
+    
+   
+}
+th{
+    font-weight: bold;
+    color: rgb(163, 160, 160);
+}
+th,td{
+    
+    font-family: sans-serif;
+    text-transform: capitalize;
+    font-size: 16px;
+    color: rgb(55, 77, 83);
+    text-align: left;
     padding-left: 10px;
+}
+tr:nth-child(odd) a{
+    color:rgb(55, 77, 83); ;
+}
+tr:nth-child(even){
+    background-color:rgb(207, 205, 205) ;
+    
+    
+}
+tr:nth-child(even) td{
+    color: white;
+}
+tr:nth-child(even) a{
+    color: white;
 }
